# llm-proxy

./: .coveragerc  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml  pytest.ini
golang/: config.go  config_test.go  go.mod  main.go  main_test.go
golang/cmd/cli/: main.go
golang/cmd/server/: config_test.go  main.go
golang/config/: config.go  config_test.go  loader.go  loader_test.go
local/: devbox.json  docker-compose.yaml  prometheus.yml
local/scripts/: run_python.sh
local/tasks/: clean.yml  docker.yml  run.yml  setup.yml  test.yml
src/llm_wrapper/client/: __init__.py  cli.py
src/llm_wrapper/configs/: expert.sample.yaml
src/llm_wrapper/lib/: __init__.py  logging.py
src/llm_wrapper/lib/telemetry/: telemetry.py
src/llm_wrapper/server/: __init__.py  api.py  config.py  config_loader.py  deps.py  main.py  models.py
src/llm_wrapper/server/handlers/: chat.py
tests/: conftest.py
tests/integration/: test_server_endpoints.py
tests/unit/client/cli/: conftest.py  dummy_openai.py  test_chat_errors.py  test_interactive_mode.py  test_non_interactive_mode.py
tests/unit/config_loader/: conftest.py  test_ignore_non_yaml.py  test_invalid_configs.py  test_missing_configs.py  test_valid_configs.py
tests/unit/lib_logging/: test_console_logging.py  test_file_logging.py
tests/unit/server/api/: conftest.py  dummy_responses.py  test_build_upstream_payload.py  test_call_completion_http_error.py  test_call_completion_success.py  test_get_config_or_raise.py
tests/unit/server/configs/: test_defaults.py  (+1 more)
(+12 files in other folders)
